--- a/CSP Final.html
+++ b/CSP Final.html
@@ -211,7 +211,7 @@ starteffect()
       <div class="w3-half">
         <img src="Apple Logo.png" style="width:100%"><p>CRM plays a pivotal role in Apple’s growth strategy. Whenever an Apple device is used, an Apple ID is needed to register the device. An Apple ID is an account you use to access Apple services like the App Store, Apple Music, iCloud, iMessage, FaceTime, and more. These unique IDs synchronize across devices, save music and film preferences, and provide bespoke recommendations based on what you like. For Apple, it’s a tool that provides insights on what customers like and it can be used for effortless, targeted marketing.</p>
         <br>
-        <img src="Coca Cola Logo.jpeg" style="width:100%"><p>Coca-Cola uses CRM to promote collaboration and deal with customer issues quickly and efficiently. By using CRM software, every member of a Coca-Cola team can identify issues, monitor customer behaviour and social media to promote offers and promotions. Moreover, team members can use mobile apps on the go to access customer history anytime and anywhere, create and update work orders, and send out field technicians in real-time.</p>
+        <img src="Coca Cola Logo.jpg" style="width:100%"><p>Coca-Cola uses CRM to promote collaboration and deal with customer issues quickly and efficiently. By using CRM software, every member of a Coca-Cola team can identify issues, monitor customer behaviour and social media to promote offers and promotions. Moreover, team members can use mobile apps on the go to access customer history anytime and anywhere, create and update work orders, and send out field technicians in real-time.</p>
         <br>
       </div>
 
